# zabbix-handler

./: .gitignore  README.md  build.txt  pyproject.toml  requirements.txt
src/: app.py  argument_start.py  config.py  config_example.yml  excel.py  parse_config.py
src/data_class/: data_request.py  data_zabbix.py
src/http_base/: request_base.py
src/zabbix/: base_func.py  data_static.py  get_host_handler.py  grops_handler.py  hosts_handler.py  templates_handler.py
